--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Curiosidades de Tecnologia</h1>
     
     <p>Tudo aquilo que voçê sempre quis saber sobre o mundo tech, em um unico lugar.</p>
-    
+    <a href="img/">test/</a>
         </header>
         <nav>
             <a href="#">Home</a>
